[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Rodrigo Racanicci <rracanicci@microsoft.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
fastapi = "^0.79.0"
numpy = "^1.23.0"
pandas = "^1.4.3"
uvicorn = "^0.18.2"

[tool.poetry.group.discover.dependencies]
torch = "=1.12.0"
pygraphviz = "=1.9"
pyarrow = "=7.0.0"
dependency-injector = "=4.38.0"
sentence_transformers = "=2.2.0"
GitPython = "=3.1.27"
psutil = "=5.9.0"
protobuf = "=3.19.4"
causica = { git = "https://github.com/microsoft/causica.git", branch = "main" }

[tool.poetry.group.events.dependencies]
gunicorn = "20.1.0"
pydantic = "1.9.0"
rpy2 = "^3.5.3"
pysynthdid = { git = "https://github.com/MasaAsami/pysynthdid.git", branch = "main" }
seaborn = "^0.11.2"

[tool.poetry.group.exposure.dependencies]
econml = "^0.12.0"
xgboost = "^1.6.1"
causallib = "^0.8.2"
scikit-learn = "^1.0.2"
lightgbm = "^3.3.2"
shap = ">=0.38.1,<0.40.0"
networkx = "^2.8.5"
celery = "^5.2.7"
redis = { extras = ["hiredis"], version = "^4.3.4" }
python-multipart = "^0.0.5"
nbformat = "^5.4.0"
dowhy = { git = "https://github.com/py-why/dowhy.git", rev = "f523accf96d6bb1afa6f3f3f3ba13cb1272b4150" }

[tool.poetry.group.dev.dependencies]
watchfiles = "0.15.0"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
poethepoet = "^0.14.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = { shell = "pytest tests/" }
_flake8 = { shell = "flake8 backend/ tests/" }
_isort = { shell = "isort ." }
_black = { shell = "black ." }
_black_check = 'black --check .'
_isort_check = 'isort --check .'

[tool.poe.tasks.format]
sequence = ["_isort", "_black"]
ignore_fail = "return_non_zero"

[tool.poe.tasks.format_check]
sequence = ["_isort_check", "_black_check"]
ignore_fail = "return_non_zero"

[tool.poe.tasks.lint]
sequence = ["format_check", "_flake8"]
ignore_fail = "return_non_zero"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | \.github
)
'''

[tool.pylint]
max-line-length = 120
disable = ["W0511"]

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 120
py_version = 38