[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Rodrigo Racanicci <rracanicci@microsoft.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.10"
fastapi = "^0.89.1"
numpy = "^1.23.5"
pandas = "^1.5.2"
uvicorn = "^0.20.0"
celery = "^5.2.7"
redis = { extras = ["hiredis"], version = "^4.4.2" }

[tool.poetry.group.discover.dependencies]
torch = "^1.13.1"
pygraphviz = "^1.10"
pyarrow = "^10.0.1"
dependency-injector = "^4.41.0"
sentence_transformers = "^2.2.2"
GitPython = "^3.1.30"
psutil = "^5.9.4"
protobuf = "^3.19.6"
causica = { git = "https://github.com/microsoft/causica.git", branch = "main" }

[tool.poetry.group.events.dependencies]
gunicorn = "^20.1.0"
pydantic = "^1.10.4"
rpy2 = "^3.5.7"
pysynthdid = { git = "https://github.com/MasaAsami/pysynthdid.git", branch = "main" }
seaborn = "^0.11.2"

[tool.poetry.group.exposure.dependencies]
econml = "^0.12.0"
xgboost = "=1.6.1"
causallib = "^0.8.2"
scikit-learn = "^1.0.2"
lightgbm = "^3.3.4"
shap = ">=0.38.1,<0.40.0"
networkx = "^2.8.5"
python-multipart = "^0.0.5"
nbformat = "^5.7.3"
dowhy = "^0.9.1"

[tool.poetry.group.dev.dependencies]
watchfiles = "^0.18.1"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
poethepoet = "^0.18.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = { shell = "pytest tests/" }
_flake8 = { shell = "flake8 backend/ tests/" }
_isort = { shell = "isort ." }
_black = { shell = "black ." }
_black_check = 'black --check .'
_isort_check = 'isort --check .'

[tool.poe.tasks.format]
sequence = ["_isort", "_black"]
ignore_fail = "return_non_zero"

[tool.poe.tasks.format_check]
sequence = ["_isort_check", "_black_check"]
ignore_fail = "return_non_zero"

[tool.poe.tasks.lint]
sequence = ["format_check", "_flake8"]
ignore_fail = "return_non_zero"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | \.github
)
'''

[tool.pylint]
max-line-length = 120
disable = ["W0511"]

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 120
py_version = 38