[tool.poetry]
name = "showwhy-inference"
version = "0.0.1"
description = ""
authors = ["Andres Morales Esquivel <andresmor@microsoft.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
llvmlite = ">=0.36.0rc1,<0.37"
xgboost = "==1.4.2"
numba = "==0.53.0"
numpy = "==1.21.0"
pandas = "==1.3.0"
econml = {git = "https://github.com/microsoft/EconML.git", rev = "main"}
dowhy = {git = "https://github.com/microsoft/dowhy.git"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^21.12b0"
mypy = "^0.931"
pytest-cov = "^3.0.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
py_version = 36
profile = "black"
force_single_line = false
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["showwhy_inference", "tests"]
extend_skip = ["setup.py"]

[tool.black]
target-version = ['py36']
force-exclude = '''
.*/setup\.py$
'''
line-length = 88


[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = "data_wrangling_components"

[tool.coverage.run]
omit = [
    "tests/*",
    ".*",
    "data/*"
    ]